[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repetier-mcp"
version = "0.1.0"
description = "MCP server for Repetier-Host / Repetier-Server 3D printer monitoring, control and intelligent diagnostics"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "3d-printing", "repetier", "sidewinder", "printer", "maker", "diagnostics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Hardware",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyserial>=3.5",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff",
    "black",
    "mypy",
]

[project.urls]
Homepage   = "https://github.com/YOUR_USERNAME/repetier-mcp"
Repository = "https://github.com/YOUR_USERNAME/repetier-mcp"
Issues     = "https://github.com/YOUR_USERNAME/repetier-mcp/issues"

[project.scripts]
repetier-mcp = "repetier_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/repetier_mcp"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
